# gtaLib

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: gtaLib.cpp  gtaLib.def  gtaLib.h  gtaLib_resource.rc  gtav.cpp  offset.h
